# ai-voice

./: .env.example  .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  nginx.conf  package.json  pnpm-lock.yaml  render.yaml  scratch_test.py
apps/api/: .env.example  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: config.py  errors.py  logging_config.py  main.py
apps/api/app/db/: __init__.py  pool.py  supabase.py
apps/api/app/middleware/: __init__.py  auth.py  request_id.py
apps/api/app/models/: __init__.py  agent.py  billing.py  call.py  internal_tenant.py  (+6 more)
apps/api/scripts/: dev_tunnel.py  make_call.py  setup_storage.py  smoke_tts.py  tts_output.pcm
apps/api/tests/: conftest.py  test_agent_registry.py  test_agent_tools_validation.py  test_audit.py  test_audit_query.py  test_auth.py  test_billing.py  test_cache.py  test_call_routing.py  test_calls_service.py  test_consent.py  test_cost_calculator.py  test_deepgram_tts.py  test_dispatch_limits.py  test_dpdp_delete.py  test_dpdp_export.py  test_escalate_tool.py  test_health.py  test_ingestion.py  test_internal.py  test_internal_agents.py  test_internal_auth.py  test_internal_tenants.py  test_internal_views.py  test_knowledge.py  test_knowledge_chunks.py  test_knowledge_retrieval.py  test_leads.py  test_llm_provider.py  test_me.py  test_metrics.py  test_onboarding.py  test_pii_scrub.py  test_portal_billing.py  test_portal_call_detail.py  test_portal_calls.py  test_portal_dashboard.py  test_pricing.py  test_providers.py  test_rag.py  (+15 more)
(+231 files in other folders)
