[project]
name = "ai-voice-api"
version = "0.1.0"
description = "FastAPI backend for AI Voice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.12",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "pyjwt[crypto]>=2.9.0",
    "httpx>=0.27.2",
    "twilio>=9.3.0",
    "pipecat-ai[websocket,deepgram,google]>=1.3.0,<2.0.0",
    "deepgram-sdk>=7.0.0",
    "openai>=1.0.0",
    "aiohttp>=3.10.0",
    "pdfplumber>=0.11.0",
    "tiktoken>=0.8.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 88
target-version = ["py311"]
